# sensi-embedding

./: .env.example  .gitignore  API.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/sensi_memory/: __init__.py  chroma_store.py  cli.py  config.py  gemini_client.py  http_server.py  mcp_server.py  models.py  normalization.py  service.py
tests/: test_chroma_store.py  test_normalization.py  test_service.py
