[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sensi-memory"
version = "0.1.0"
description = "Gemini multimodal embeddings stored in a local ChromaDB collection."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.20",
    "fastapi>=0.111.0",
    "google-genai>=1.10.0",
    "mcp>=0.1.0",
    "numpy>=1.26.4",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
]

[project.scripts]
sensi-memory = "sensi_memory.cli:main"
sensi-memory-mcp = "sensi_memory.mcp_server:main"
sensi-memory-http = "sensi_memory.http_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
